--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -8,17 +8,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+
+    <!--  Cascase CSS style sheet-->
     <link rel="stylesheet" type="text/css" href="assest/css/bootstrap.css" />
+    <!-- Main angular file -->
     <script src="assest/js/angular.js"></script>
     <script src="assest/js/angular-route.js"></script>
-
+    <!-- angular config/Routes -->
     <script src="app/app.js"></script>
     <script src="app/routes.js"></script>
+    <!-- Angular Controllers -->
     <script src="app/controllers/userCtrl.js"></script>
-    <title>Theme Template for Bootstrap</title>
+    <script src="app/controllers/mainCtrl.js"></script>
+    <!-- Angular Services -->
+    <script src="app/services/userServices.js"></script>
+    <script src="app/services/authServices.js"></script>
+    <title>OAuth app</title>
   </head>
 
-  <body ng-app="userApp">
+  <body ng-app="userApp" ng-controller="mainCtrl as main" ng-cloak>
     <!-- userApp find due to app/app.js in script tag -->
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -36,13 +44,19 @@
             <span class="icon-bar"></span> <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Bootstrap theme</a>
+          <a class="navbar-brand" href="#">O'Auth app</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/register">Register</a></li>
+            <li><a ng-show="!main.isLoggedIn" href="/login">Login</a></li>
+            <li><a ng-show="!main.isLoggedIn" href="/register">Register</a></li>
+            <li>
+              <a ng-show="main.isLoggedIn" href="#" ng-click="main.logout()"
+                >Logout</a
+              >
+            </li>
+
             <li class="dropdown">
               <a
                 href="#"
@@ -62,6 +76,11 @@
                 <li><a href="#">Separated link</a></li>
                 <li><a href="#">One more separated link</a></li>
               </ul>
+            </li>
+            <li>
+              <a ng-show="main.isLoggedIn" href="/profile"
+                >Hello {{ main.username }}</a
+              >
             </li>
           </ul>
         </div>
