--- a/public/app/views/pages/about.html
+++ b/public/app/views/pages/about.html
@@ -1,1 +1,3 @@
-<div class="page-header"><h1>i am about route</h1></div>
+<div class="page-header">
+  <h1>i am {{ main.username }} about route</h1>
+</div>
