--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,1 +1,3 @@
-<div class="page-header"><h1>Hello form home route</h1></div>
+<div class="page-header">
+  <h1>Hello {{ main.username }} form home route</h1>
+</div>
